fix overlapping class names

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -9,7 +9,7 @@
     rgba(0, 0, 0, 0.25) 0px 8px 16px -8px;
 }
 
-.section {
+.resume-section {
   padding: 0 56px;
 }
 
